--- a/backend/package.json
+++ b/backend/package.json
@@ -29,8 +29,10 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.1",
+    "node-rdpjs": "^0.3.0",
     "nodemailer": "^6.9.15",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "ws": "^8.18.0"
   },
   "type": "module"
 }
