--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,8 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.1",
+    "mstsc.js": "^0.2.4",
+    "node-rdp": "^1.0.1",
     "node-rdpjs": "^0.3.0",
     "nodemailer": "^6.9.15",
     "nodemon": "^3.1.4",
