--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/DumitruTudor/WindowsOnLinux#readme",
   "dependencies": {
     "@aws-sdk/client-iam": "^3.645.0",
+    "@aws-sdk/client-s3": "^3.717.0",
     "@aws-sdk/client-ssm": "^3.658.1",
     "aws-sdk": "^2.1691.0",
     "bcrypt": "^5.1.1",
