--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/DumitruTudor/WindowsOnLinux#readme",
   "dependencies": {
+    "@aws-sdk/client-ec2": "^3.721.0",
     "@aws-sdk/client-iam": "^3.645.0",
     "@aws-sdk/client-s3": "^3.717.0",
     "@aws-sdk/client-ssm": "^3.658.1",
